# S3Wrapper

./: README.md  pyproject.toml
S3Wrapper/: S3Auth.py  S3Wrapper.py
s3wrapper/: S3Auth.py  S3Wrapper.py  __init__.py
