[tool.poetry]
name = "s3wrapper"
version = "0.1.0"
description = ""
authors = ["l02 <l8556@outlook.com>"]
readme = "README.md"
repository='https://github.com/l8556/S3Wrapper.git'
classifiers=[
    'Operating System :: OS Independent',
    "Programming Language :: Python :: 3 :: Only",
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Programming Language :: Python :: Implementation :: CPython',
]

[tool.poetry.dependencies]
python = "^3.9"
rich = "*"
boto3 = "^1.40"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
